--- a/find-my-food/src/App.css
+++ b/find-my-food/src/App.css
@@ -36,3 +36,10 @@
     transform: rotate(360deg);
   }
 }
+
+.menubutton {
+  padding: 10px;
+  border: 5px solid var(--border-color);
+  background-color: var(--button-background-color);
+  border-radius: 10%;
+}
