--- a/fmf/src/App.css
+++ b/fmf/src/App.css
@@ -113,8 +113,8 @@
 
 .footertype {
   background: rgb(220, 235, 255);
-  padding-top: 10px;
-  margin-top: 100px;
+  padding-top: -20px;
+  /* margin-top: 100px; */
 }
 
 .homediv {
