--- a/fmf/src/App.css
+++ b/fmf/src/App.css
@@ -113,7 +113,7 @@
 
 .footertype {
   background: rgb(220, 235, 255);
-  /* padding-top: -10px; */
+  padding-top: 3px;
   /* margin-top: 100px; */
 }
 
