--- a/fmf/src/App.css
+++ b/fmf/src/App.css
@@ -313,3 +313,13 @@ navmain {
   width: 50%;
   margin-left: 25%;
 }
+
+.loginInput {
+  width: 90%;
+  margin-left: 5%;
+  border-radius: 10%;
+  margin-bottom: 10px;
+  margin-top: 5px;
+  padding: 8px;
+  font-size: 15px;
+}
