--- a/fmf/src/App.css
+++ b/fmf/src/App.css
@@ -5,6 +5,7 @@
   --menu-color: #d4bdff;
   --text-color: #000;
   --navmenu-btn-color: #B2BAC2;
+  --navmenu-item-color: #B2BAC2;
   --small-link-btn-color: gray;
   --footer-background: rgb(220, 235, 255);
   --app-link-color: #61dafb;
@@ -272,7 +273,7 @@ img {
   align-items: center;
   padding: 10px 20px;
   cursor: pointer;
-  color: var(--navmenu-btn-color);
+  color: var(--navmenu-item-color);
   text-decoration: none;
 }
 
