small navbar bug

--- a/fmf/src/App.css
+++ b/fmf/src/App.css
@@ -5,7 +5,7 @@
   --menu-color: #d4bdff;
   --text-color: #000;
   --navmenu-btn-color: #B2BAC2;
-  --navmenu-item-color: #B2BAC2;
+  --navmenu-item-color: white;
   --small-link-btn-color: gray;
   --footer-background: rgb(220, 235, 255);
   --app-link-color: #61dafb;
