--- a/fmf/src/App.css
+++ b/fmf/src/App.css
@@ -68,6 +68,20 @@
   font-family: 'Courier New', Courier, monospace;
 }
 
+.randomChooseButton {
+  width: 48%;
+  background: var(--button-color);
+  color: var(--text-color);
+  font-weight: bold;
+  font-size: 15px;
+  padding: 15px;
+  margin: 1% 5% 10% 0;
+  border-radius: 20%;
+  border: 3px solid var(--border-color);
+  text-align: center;
+  font-family: 'Courier New', Courier, monospace;
+}
+
 .menuContainer {
   width: 80%;
   margin-left: 10%;
