--- a/fmf/src/App.css
+++ b/fmf/src/App.css
@@ -344,7 +344,8 @@ navmain {
 }
 
 .priceItem {
-  border: 5px solid var(--border-color);
+  border: 3px solid var(--border-color);
+  padding: 10px;
   width: 20%;
   margin-left: 10%;
   display:inline;
