--- a/fmf/src/App.css
+++ b/fmf/src/App.css
@@ -347,6 +347,7 @@ navmain {
   border: 3px solid var(--border-color);
   padding: 10px;
   width: 20%;
+  margin-top: 10px;
   margin-left: 10%;
   display:inline;
 }
