--- a/fmf/src/App.css
+++ b/fmf/src/App.css
@@ -4,7 +4,7 @@
   --button-color: #b4d4fd;
   --menu-color: #d4bdff;
   --text-color: #000;
-  --navmenu-btn-color: #B2BAC2;
+  --navmenu-btn-color: black;
   --navmenu-item-color: white;
   --small-link-btn-color: gray;
   --footer-background: rgb(220, 235, 255);
