--- a/fmf/src/App.css
+++ b/fmf/src/App.css
@@ -5,6 +5,7 @@
   --menu-color: #d4bdff;
   --text-color: #000;
   --navmenu-btn-color: black;
+  --navmenu-icon-color: purple;
   --navmenu-item-color: white;
   --small-link-btn-color: gray;
   --footer-background: rgb(220, 235, 255);
