--- a/fmf/src/App.css
+++ b/fmf/src/App.css
@@ -140,6 +140,7 @@
 
 .footertype {
   background: var(--footer-background);
+  bottom: 0;
   /* padding-top: 1px; */
   /* margin-top: 100px; */
 }
