--- a/fmf/src/App.css
+++ b/fmf/src/App.css
@@ -218,7 +218,7 @@ p {
   margin-left: 5%;
   border-radius: 10%;
   margin-bottom: 10px;
-  margin-top: 5pxmidTitleSize;
+  margin-top: 5px;
   padding: 8px;
   font-size: 15px;
 }
