--- a/fmf/src/App.css
+++ b/fmf/src/App.css
@@ -9,7 +9,7 @@
   --small-link-btn-color: white;
   --footer-background: rgb(220, 235, 255);
   --app-link-color: #5838b4;
-  --home-div-bg-color: white;
+  --home-div-bg-color: #5838b4;
   --nav-menu-btn-color: rgb(10, 25, 41);
   --big-title-text: white;
   --small-title-text: orange;
