--- a/fmf/src/App.css
+++ b/fmf/src/App.css
@@ -75,9 +75,9 @@
 }
 
 .randomChooseButton {
-  width: 30%;
+  width: 80%;
   background: var(--border-color);
-  color: var(--text-color);
+  color: white;
   font-weight: bold;
   font-size: 50px;
   padding: 15px;
